--- a/gm/views/a.html
+++ b/gm/views/a.html
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello</title>
+    <title>博客账号 - 登录</title>
+    <link rel="stylesheet" href="../static/css/blogsheet.css">
 </head>
 <body>
-    <p>Hello {{.}}!</p>
-</body>
-</html>
